--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".Splash">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="154dp"
+        android:layout_height="96dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="120dp"
+        android:text="로고 스플래시 화면"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
