--- a/WithGaNaDa/app/src/main/res/values/colors.xml
+++ b/WithGaNaDa/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="btn">#FF7986CB</color>
+    <color name="btn_nomal">#FFD6D7D7</color>
+    <color name="btn_fail">#FFE57373</color>
+
+
 </resources>
